# mesh-parameterization

./: CMakeLists.txt  README.md
include/: geometry_images.h  parameterize_mesh.h
src/: geometry_images.cpp  main.cpp  parameterize_mesh.cpp
